改正了一些网址

--- a/102-github-pages/index.html
+++ b/102-github-pages/index.html
@@ -30,17 +30,17 @@
     </div>
     <div id="summary">
       <h4>熟悉html/css/js等前端技术，熟悉jquery库，能够熟练使用DIV和CSS设计网页。</h4>
-      <h4>对于前端开发有浓厚兴趣。具有良好的沟通能力和团队合作精神。</h4> 
-      <h4>希望自己可以在前端这条路上走下去</h4>  
+      <h4>对于前端开发有浓厚兴趣。具有良好的沟通能力和团队合作精神。</h4>
+      <h4>希望自己可以在前端这条路上走下去</h4>
     </div>
     <div class="row addEvent" id="items">
       <h3>项目</h3>
       <br/>
       <div class="col-md-3 col-xs-6 trans">
-       <a href="http://136645138.github.io/toDolist/"><img class="img-responsive img-circle" src="img/github.jpg">jquery实现的todo</a>
+       <a href="http://heeefei.github.io/toDolist/"><img class="img-responsive img-circle" src="img/github.jpg">jquery实现的todo</a>
       </div>
       <div class="col-md-3 col-xs-6 trans">
-        <a href="http://136645138.github.io/js-projects/"><img class="img-responsive img-circle" src="img/github.jpg"> js监听事件</a>
+        <a href="http://heeefei.github.io/js-projects/"><img class="img-responsive img-circle" src="img/github.jpg"> js监听事件</a>
       </div>
       <div class="col-md-3 col-xs-6 trans">
         <a href="#/"><img class="img-responsive img-circle" src="img/github.jpg"> React练习（未完成）</a>
