--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -2,21 +2,16 @@
 <head>
   <meta name="author" content="minjiepei">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="grid.css">
 </head>
 
 <body>
-  <div id="box">
-    <form role="form">
-      <div class="col-sm-7">
-        <div class="input-group-md">
-          <input type="text" class="form-control" id="integer" placeholder="select an integer between 1 to 20">
-        </div>
-      </div>
-      <div class="col-sm-5">
-        <button type="button" id="generate" class="btn btn-md">Generate</button>
-        <button type="reset" id="clear" class="btn btn-md">Clear</button>
+  <div class="box">
+    <form role="form" class="form-box">
+      <input type="text" class="form-input" id="integer" placeholder="select an integer between 1 to 20">
+      <div class="form-btn">
+        <button type="button" id="generate" class="btn">Generate</button>
+        <button type="reset" id="clear" class="btn">Clear</button>
       </div>
     </form>
     <canvas id="main" width="600" height="600">Please upgrade your browser!</canvas>
