--- a/302-backbone-quiz-app/index.html
+++ b/302-backbone-quiz-app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content='width=device-width, minimum-scale=1.0,maximum-scale=1.0,user-scalable=0 '>
 	<title>backbone-quiz-app</title>
 	<link rel="stylesheet" href="./dist/bundle-css.css">
 </head>
