add event handler

--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -7,13 +7,8 @@
 	</head>
 	<body>
 		<input type="text" placeholder="input n to generate grid" class="gridNumInput"></input>
-		<button class="btn btn-info">generate grid</button>
-		<div id="myGid" class="gridContainer">
-			<div class="grid">1</div>
-			<div class="grid">1</div>
-			<div class="grid">1</div>
-			<div class="grid">1</div>
-			<div class="grid">1</div>
+		<button class="btn btn-info" id="genGridBtn">generate grid</button>
+		<div class="gridContainer">
 		</div>
 		<script src="clickableGrid.js"></script>
 	</body>
