pass 'gridContainer' to 'generateGrids' function

--- a/101-clickable-grid/index.html
+++ b/101-clickable-grid/index.html
@@ -10,6 +10,6 @@
 		<button class="btn btn-info" id="genGridBtn">generate grid</button>
 		<div class="gridContainer">
 		</div>
-		<script src="clickableGrid.js"></script>
+		<script src="clickableGrid2.js"></script>
 	</body>
 </html>
